--- a/src/Header.scss
+++ b/src/Header.scss
@@ -7,4 +7,5 @@
   text-transform: uppercase;
   margin-top: 8vh;
   text-align: center;
+  margin-bottom: 5vh;
 }
