--- a/src/ProjectSection.scss
+++ b/src/ProjectSection.scss
@@ -6,7 +6,7 @@
     justify-content: center;
     
     .project__item__image {
-        width: 80vw;
+        width: 60vw;
         margin-bottom: 1vh;
         // box-shadow: 3px 3px black;
     }
